implemented rudimentary login system in frontend
